Correctly calculate & apply scrollbar > viewport offset for hard scrollbars.

--- a/server/assets/styles/layout/_body.css
+++ b/server/assets/styles/layout/_body.css
@@ -3,8 +3,9 @@ body {
   color: white;
   font: 300 normal 16px/16px Oxygen, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   float: left;
-  height: 100%;
+  height: calc(100vh + 2px);
   overflow-x: hidden;
+  vertical-align: top;
   width: 100%;
   -webkit-font-smoothing: auto;
 }
