--- a/src/styles/app/layout/_header.scss
+++ b/src/styles/app/layout/_header.scss
@@ -1,17 +1,17 @@
 .header {
-  background: white;
-  border-bottom: edge(rgba($gallery, 0.5));
-  box-shadow: 0 -1px 8px 3px rgba($gallery, 0.65);
-  display: block !important;
+  background: rgba($nero, 0.98);
+  border-bottom: edge(rgba($gallery, 0.1));
+  box-shadow: 0 -1px 14px 2px rgba($nero, 0.5);
   height: $headerHeight;
   z-index: 1004;
   transition: box-shadow 200ms ease-out;
+  @include float-box;
   @include position(fixed, 0 0 null 0);
   @include breakpoint($medium) {
     height: $headerHeightLarge;
   }
   &::before {
-    background: white;
+    background: argb(0.45);
     content: '';
     @include position(absolute, null 0 0 0);
     @include size(100% 1px);
@@ -30,6 +30,18 @@
   &-center {
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+  &-favorite {
+    margin: 0 4px 0 0;
+    @include float-box;
+    @include size(44px 100%);
+    .offset-scroll & {
+      margin-right: 20px;
+    }
+    &-icon {
+      @include center-xy;
+      @include size(34px);
+    }
   }
   &-left {
     left: $appBasePad;
